--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react-dom": "https://esm.sh/react-dom@18.2.0",
     "lucide-react": "https://esm.sh/lucide-react@0.292.0",
-    "@google/genai": "https://esm.sh/@google/genai@0.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
+    "@google/genai": "https://esm.sh/@google/genai@0.1.1"
   }
 }
 </script>
